// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsLayout renders basic header styles properly 1`] = `
<head>
  <style
    data-styled="active"
    data-styled-version="6.1.1"
  >
    .bjAgsI{background-color:#4a402b;}
    .bjAgsI .usa-nav__primary,.bjAgsI .usa-nav__secondary-links{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .bjAgsI a.usa-nav__link{color:#594973;}
    .bjAgsI .usa-nav__secondary-item&gt;a{color:#c8155d;}
    .bjAgsI button.usa-menu-btn{background-color:#cfcd03;}
    .bjAgsI button.usa-menu-btn:hover{background-color:#9d9b02;}
    .hTCXlM .usa-banner__header{background-color:#643617;color:#dacb1b;}
    .dFtKev li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a,.dFtKev .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7!important;}
    .dFtKev .usa-current::after,.dFtKev .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .dFtKev .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .dFtKev .usa-nav__primary a{font-family:"Public Sans Web"!important;font-weight:bold!important;}
    .jTbFma{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .jTbFma .result-title-link&gt;.result-title-label{color:#33f0aa!important;}
    .jTbFma .result-title-link:visited&gt;.result-title-label{color:#4a97ad!important;}
    .jTbFma .result-desc&gt;p{color:#2bd4c7!important;}
    .jTbFma .result-url-text{color:#475830!important;}
    .Sisq{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#5fcfc5;}
    .Sisq .usa-footer__return-to-top&gt;a,.Sisq a.usa-footer__primary-link{color:#46f966;}
    .iyPcih{background-color:#be1c21;}
    .iyPcih .usa-identifier__container,.iyPcih .usa-identifier__container&gt;a,.iyPcih .usa-identifier__identity-disclaimer,.iyPcih .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .iyPcih .usa-identifier__required-links-item&gt;a,.iyPcih .usa-identifier__identity-domain{color:#5d5a6f;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
  </style>
</head>
`;

exports[`SearchResultsLayout renders extended header styles properly 1`] = `
<head>
  <style
    data-styled="active"
    data-styled-version="6.1.1"
  >
    .kqnXCS{background-color:#4a402b;}
    .kqnXCS .usa-nav__primary,.kqnXCS .usa-nav__secondary{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .kqnXCS .usa-nav{background-color:#83df0a;}
    .kqnXCS a.usa-nav__link{color:#594973;}
    .kqnXCS .usa-nav__secondary-item&gt;a{color:#c8155d;}
    .kqnXCS button.usa-menu-btn{background-color:#cfcd03;}
    .kqnXCS button.usa-menu-btn:hover{background-color:#9d9b02;}
    .hTCXlM .usa-banner__header{background-color:#643617;color:#dacb1b;}
    .dFtKev li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a,.dFtKev .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7!important;}
    .dFtKev .usa-current::after,.dFtKev .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .dFtKev .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .dFtKev .usa-nav__primary a{font-family:"Public Sans Web"!important;font-weight:bold!important;}
    .jTbFma{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .jTbFma .result-title-link&gt;.result-title-label{color:#33f0aa!important;}
    .jTbFma .result-title-link:visited&gt;.result-title-label{color:#4a97ad!important;}
    .jTbFma .result-desc&gt;p{color:#2bd4c7!important;}
    .jTbFma .result-url-text{color:#475830!important;}
    .Sisq{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#5fcfc5;}
    .Sisq .usa-footer__return-to-top&gt;a,.Sisq a.usa-footer__primary-link{color:#46f966;}
    .iyPcih{background-color:#be1c21;}
    .iyPcih .usa-identifier__container,.iyPcih .usa-identifier__container&gt;a,.iyPcih .usa-identifier__identity-disclaimer,.iyPcih .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .iyPcih .usa-identifier__required-links-item&gt;a,.iyPcih .usa-identifier__identity-domain{color:#5d5a6f;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
  </style>
</head>
`;

exports[`SearchResultsLayout renders search with results styles properly 1`] = `
<head>
  <style
    data-styled="active"
    data-styled-version="6.1.1"
  >
    .kqnXCS{background-color:#4a402b;}
    .kqnXCS .usa-nav__primary,.kqnXCS .usa-nav__secondary{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .kqnXCS .usa-nav{background-color:#83df0a;}
    .kqnXCS a.usa-nav__link{color:#594973;}
    .kqnXCS .usa-nav__secondary-item&gt;a{color:#c8155d;}
    .kqnXCS button.usa-menu-btn{background-color:#cfcd03;}
    .kqnXCS button.usa-menu-btn:hover{background-color:#9d9b02;}
    .hTCXlM .usa-banner__header{background-color:#643617;color:#dacb1b;}
    .dFtKev li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a,.dFtKev .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7!important;}
    .dFtKev .usa-current::after,.dFtKev .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .dFtKev .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .dFtKev .usa-nav__primary a{font-family:"Public Sans Web"!important;font-weight:bold!important;}
    .jTbFma{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .jTbFma .result-title-link&gt;.result-title-label{color:#33f0aa!important;}
    .jTbFma .result-title-link:visited&gt;.result-title-label{color:#4a97ad!important;}
    .jTbFma .result-desc&gt;p{color:#2bd4c7!important;}
    .jTbFma .result-url-text{color:#475830!important;}
    .Sisq{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#5fcfc5;}
    .Sisq .usa-footer__return-to-top&gt;a,.Sisq a.usa-footer__primary-link{color:#46f966;}
    .iyPcih{background-color:#be1c21;}
    .iyPcih .usa-identifier__container,.iyPcih .usa-identifier__container&gt;a,.iyPcih .usa-identifier__identity-disclaimer,.iyPcih .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .iyPcih .usa-identifier__required-links-item&gt;a,.iyPcih .usa-identifier__identity-domain{color:#5d5a6f;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
  </style>
</head>
`;
